# voidn

./: .gitignore  CMakeLists.txt  OIDN 빌드과정.txt  README.md  core.cpp  core.h  debbuild.bat  debconfig.bat  ktxcomman.txt  main.cpp  main_.cpp  relbuild.bat  relconfig.bat  release_configure.bat  run_build.bat
core/: core.cpp  core.h
ktx/: CmakeLists.txt
ktx/imageio/: CMakeLists.txt  imageio.cc  imageio.h
ktx/imageio/tga.imageio/: tgainput.cc  tgaoutput.cc
ktx/ktxdll/: CMakeLists.txt  command_create.cpp  ktx_main.cpp  ktx_main.h  version.h
lib/: version.h
test/: runner.py  runner_core.py  vcpp-test.cpp  한글 띄어쓰기.tga
